# nvidia-monitor-eventing

./: Dockerfile  Doxyfile  MAINTAINERS  README.md  meson.build  meson_options.txt
config/: eventing_config.h.in  meson.build
examples/: event_info.json
include/: check_accessor.hpp  cmd_line.hpp  common.hpp  config_parser.hpp  dat_traverse.hpp  data_accessor.hpp  dbus_accessor.hpp  dbus_log_utils.hpp  dbus_singleton.hpp  dbus_utility.hpp  device_id.hpp  device_status_handler.hpp  device_util.hpp  diagnostics.hpp  event_detection.hpp  event_handler.hpp  event_info.hpp  eventing_main.hpp  json_proc.hpp  json_schema.hpp  log.hpp  message_composer.hpp  message_dispatcher.hpp  object.hpp  pc_event.hpp  printing_util.hpp  property_accessor.hpp  property_variant.hpp  selftest.hpp  threadpool_manager.hpp  util.hpp
monitor-eventing-memory-watcher/: monitor-eventing-memory-watcher
scripts/: buildenv
src/: check_accessor.cpp  config_parser.cpp  config_schemas.cpp  dat_traverse.cpp  data_accessor.cpp  dbus_accessor.cpp  device_id.cpp  device_util.cpp  diagnostics.cpp  event_detection.cpp  event_handler.cpp  event_info.cpp  eventing_main.cpp  json_proc.cpp  json_schema.cpp  log.cpp  meson.build  message_composer.cpp  message_dispatcher.cpp  property_accessor.cpp  selftest.cpp  util.cpp
test/: accessor_test.cpp  dat_test.cpp  dat_to_dbus_test.cpp  dat_traverse_test.cpp  dbus_accessor_test.cpp  device_id_test.cpp  event_detection_test.cpp  event_test.cpp  json_proc_test.cpp  propertyvalue_string_test.cpp  propertyvalue_variant_test.cpp  selftest_test.cpp  tests_common_defs.cpp  tests_common_defs.hpp  util_test.cpp
tools/: dbus_tester.cpp  device_association_editor  device_healthrollup_validator.py  event_injector  event_validation.py  health_presence_check.py  json-to-nlohman.py  mctp-error-detection  mctp-vdm-util-wrapper  meson.build  mockup_wrappers  nvidia-xid-event-handler  selftest_json_generator  selftest_tool.cpp  sub-dat.py  xid-event-util-wrapper
tools/DAT-json-exporter/: spreadsheets-install.sh
tools/dat_and_report_merge_tool/: dat_and_report_merger.py
tools/device-id-lang/: README.md  ids-map.py  ids.py  json-gen.py
tools/device_id_mapping/: device-id-norm-gen.sh  device-id-norm-test.sh  device-id-norm.sh  device_id_map_gen.sh  gen-old-ids.sh
tools/jtag/: jtag_test.cpp
tools/modules/: com.py  event_accessor_script.py  event_logging_script.py  injector_script_base.py
tools/vulcan-faults/: event-info-skeleton.xsh  remove-cr.sh
(+18 files in other folders)
